<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/keywordsInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleInputLayout"
        app:helperText="@string/keywords_helper_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/keywordsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/keywords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contentInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/keywordsInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content"
            android:inputType="textMultiLine"
            android:minLines="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/commentInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/contentInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/commentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment"
            android:inputType="textMultiLine"
            android:minLines="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/constantCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/constant_entry"
        app:layout_constraintTop_toBottomOf="@id/commentInputLayout" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/regexCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_regex"
        app:layout_constraintTop_toBottomOf="@id/constantCheckBox" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/priorityInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/regexCheckBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/priorityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/priority"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>